# Sliding-Puzzle

./: .gitignore  LICENSE  README.md  haskell.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: .Helpers.hs.swp  .Main.hs.swo  .Main.hs.swp  BFS.hs  Helpers.hs  Main.hs  Types.hs
src/PuzzleLogic/: Helpers.hs  Heuristic.hs  PuzzleLogic.hs  Types.hs
src/Search/: AStar.hs  BFS.hs  SearchCommon.hs
