cabal-version:      3.0
name:               haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Jakob Kampers
maintainer:         jakobkampers23@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, containers 
    hs-source-dirs:   src
    default-language: Haskell2010
