cabal-version:      3.0
name:               haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Jakob Kampers
maintainer:         jakobkampers23@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -O2 -Wall
executable haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    PuzzleLogic.Helpers, PuzzleLogic.Types, PuzzleLogic.PuzzleLogic, PuzzleLogic.Heuristic, Search.BFS, Search.AStar  
    build-depends:    base ^>=4.21.0.0, array >=0.5.8.0, hashable >=1.3, containers, unordered-containers, heap
    hs-source-dirs:   src
    default-language: Haskell2010
